@@ -63,7 +63,7 @@ AT_CHECK([$COBC prog.$COB_OBJECT_EXT])
 AT_CHECK([$COBCRUN prog], [0], [bluBb], [])
 AT_CHECK([$COBC -x -C prog.cob], [0], [], [])
 AT_CHECK([$COBC -x -c prog.c], [0], [], [])
-AT_CHECK([$COBC -x prog.$COB_OBJECT_EXT -o progo])
+AT_CHECK([$COBC -x prog.$COB_OBJECT_EXT -o progo], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./progo], [0], [bluBb], [])
 AT_CHECK([$COBC -E prog.cob], [0], [], [])
 AT_CHECK([$COBC -x prog.i], [0], [], [])
@@ -91,11 +91,40 @@ AT_CHECK([$COBC prog.$COB_OBJECT_EXT -o prog])
 AT_CHECK([$COBCRUN prog], [0], [bluBb], [])
 AT_CHECK([$COBC -x prog.cob -o prog.c], [0], [], [])
 AT_CHECK([$COBC -x prog.c -o prog.$COB_OBJECT_EXT], [0], [], [])
-AT_CHECK([$COBC -x prog.$COB_OBJECT_EXT -o progo$COB_EXE_EXT])
+AT_CHECK([$COBC -x prog.$COB_OBJECT_EXT -o progo$COB_EXE_EXT], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./progo], [0], [bluBb], [])
 AT_CHECK([$COBC prog.cob -o prog.i], [0], [], [])
 AT_CHECK([$COBC -x prog.i -o prog$COB_EXE_EXT], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [bluBb], [])
+AT_CLEANUP
+
+
+AT_SETUP([Compiler outputs (path specified)])
+AT_KEYWORDS([runmisc cobc])
+
+AT_DATA([prog.cob],[
+        IDENTIFICATION DIVISION.
+        PROGRAM-ID. prog.
+        DATA DIVISION.
+        WORKING-STORAGE SECTION.
+        01 BLA PIC X(5) VALUE 'bluBb'.
+        PROCEDURE DIVISION.
+        DISPLAY BLA NO ADVANCING END-DISPLAY
+        STOP RUN.
+])
+
+AT_CHECK([mkdir -p sub], [0], [], [])
+AT_CHECK([$COBC prog.cob -o sub/prog.c], [0], [], [])
+AT_CHECK([$COBC $(_return_path "sub/prog.c") -o $(_return_path "sub/prog.$COB_OBJECT_EXT")], [0], [], [])
+AT_CHECK([$COBC $(_return_path "sub/prog.$COB_OBJECT_EXT") -o $(_return_path "sub/prog")])
+AT_CHECK([$COBCRUN -M $(_return_path "sub/") prog], [0], [bluBb], [])
+AT_CHECK([$COBC -x prog.cob -o $(_return_path "sub/prog.c")], [0], [], [])
+AT_CHECK([$COBC -x $(_return_path "sub/prog.c") -o $(_return_path "sub/prog.$COB_OBJECT_EXT")], [0], [], [])
+AT_CHECK([$COBC -x $(_return_path "sub/prog.$COB_OBJECT_EXT") -o $(_return_path "sub/progo$COB_EXE_EXT")])
+AT_CHECK([$COBCRUN_DIRECT ./sub/progo], [0], [bluBb], [])
+AT_CHECK([$COBC prog.cob -o $(_return_path "sub/prog.i")], [0], [], [])
+AT_CHECK([$COBC -x sub/prog.i -o $(_return_path "sub/prog$COB_EXE_EXT")], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./sub/prog], [0], [bluBb], [])
 AT_CLEANUP
 
 
@@ -165,7 +194,7 @@ AT_CLEANUP
 
 
 AT_SETUP([C Compiler optimizations])
-AT_KEYWORDS([runmisc cobc])
+AT_KEYWORDS([runmisc cobc optimization])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION   DIVISION.
@@ -192,6 +221,13 @@ AT_CHECK([$COBCRUN_DIRECT ./prog3], [0], [OK], [])
 
 AT_CHECK([$COMPILE -O0  -o prog  prog.cob], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog],  [0], [OK], [])
+
+# last test with O2 (strips output) and output name
+AT_CHECK([mkdir -p sub], [0], [], [])
+AT_CHECK([$COMPILE_MODULE -O2 -o $(_return_path "sub/prog") prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN -M sub/ prog],  [0], [OK], [])
+AT_CHECK([$COMPILE -O2 -o $(_return_path "sub/prog$COB_EXE_EXT") prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./sub/prog],  [0], [OK], [])
 
 AT_CLEANUP
 
@@ -521,6 +557,26 @@ AT_DATA([prog.cob], [
 
 AT_CHECK([$COMPILE -jd prog.cob], [0], [job], [])
 AT_CHECK([$COMPILE_MODULE -jd prog.cob], [0], [job], [])
+
+AT_CLEANUP
+
+
+AT_SETUP([Run job after compilation (path specified)])
+AT_KEYWORDS([runmisc job])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       PROCEDURE        DIVISION.
+           DISPLAY "job" WITH NO ADVANCING END-DISPLAY
+           STOP RUN WITH NORMAL STATUS.
+])
+
+AT_CHECK([mkdir -p sub], [0], [], [])
+AT_CHECK([$COMPILE_MODULE -jd -o $(_return_path "sub/prog") prog.cob], [0], [job], [])
+AT_CHECK([$COMPILE -jd -o $(_return_path "sub/prog$COB_EXE_EXT") prog.cob], [0], [job], [])
 
 AT_CLEANUP
 
